--- a/package.json
+++ b/package.json
@@ -1,35 +1,43 @@
 {
-  "name": "feedback-collection-for-online-courses",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev --turbopack",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@radix-ui/react-label": "^2.1.4",
-    "@radix-ui/react-select": "^2.2.2",
-    "class-variance-authority": "^0.7.1",
-    "clsx": "^2.1.1",
-    "lucide-react": "^0.503.0",
-    "next": "15.3.1",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "tailwind-merge": "^3.2.0"
-  },
-  "devDependencies": {
-    "@eslint/eslintrc": "^3",
-    "@tailwindcss/postcss": "^4",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "eslint": "^9",
-    "eslint-config-next": "15.3.1",
-    "prisma": "^6.6.0",
-    "tailwindcss": "^4",
-    "tw-animate-css": "^1.2.8",
-    "typescript": "^5"
-  }
+	"name": "feedback-collection-for-online-courses",
+	"version": "0.1.0",
+	"private": true,
+	"description": "A web application for collecting feedback on online courses.",
+	"author": "Clinton Ngotta",
+	"license": "MIT",
+	"type": "module",
+	"scripts": {
+		"dev": "next dev --turbopack",
+		"build": "next build",
+		"start": "next start",
+		"lint": "next lint",
+		"update-db": "prisma db push",
+		"migrate-prisma": "prisma migrate dev --name init",
+		"generate-prisma": "prisma generate"
+	},
+	"dependencies": {
+		"@prisma/client": "^6.6.0",
+		"@radix-ui/react-label": "^2.1.4",
+		"@radix-ui/react-select": "^2.2.2",
+		"class-variance-authority": "^0.7.1",
+		"clsx": "^2.1.1",
+		"lucide-react": "^0.503.0",
+		"next": "15.3.1",
+		"react": "^19.0.0",
+		"react-dom": "^19.0.0",
+		"tailwind-merge": "^3.2.0"
+	},
+	"devDependencies": {
+		"@eslint/eslintrc": "^3",
+		"@tailwindcss/postcss": "^4",
+		"@types/node": "^20",
+		"@types/react": "^19",
+		"@types/react-dom": "^19",
+		"eslint": "^9",
+		"eslint-config-next": "15.3.1",
+		"prisma": "^6.6.0",
+		"tailwindcss": "^4",
+		"tw-animate-css": "^1.2.8",
+		"typescript": "^5"
+	}
 }
