--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
 		"@radix-ui/react-slot": "^1.2.0",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
+		"jsonwebtoken": "^9.0.2",
 		"lucide-react": "^0.503.0",
 		"next": "15.3.1",
 		"react": "^19.0.0",
@@ -34,6 +35,7 @@
 	"devDependencies": {
 		"@eslint/eslintrc": "^3",
 		"@tailwindcss/postcss": "^4",
+		"@types/jsonwebtoken": "^9.0.9",
 		"@types/node": "^20",
 		"@types/react": "^19",
 		"@types/react-dom": "^19",
